# zakhor

./: .gitignore  Cargo.toml  DESIGN.md  Makefile  README.md  build.rs  flake.nix
.github/workflows/: ci.yml
crates/zakhor-api/: Cargo.toml
crates/zakhor-api/src/: lib.rs  project.rs  server.rs  tool_capture.rs  tools.rs
crates/zakhor-api/src/api/: admin.rs  code.rs  decisions.rs  entities.rs  error.rs  graph.rs  mod.rs  observations.rs  projects.rs  search.rs
crates/zakhor-code/: Cargo.toml
crates/zakhor-code/src/: code_index.rs  lib.rs
crates/zakhor-common/: Cargo.toml
crates/zakhor-common/src/: config.rs  error.rs  lib.rs  vocab.rs
crates/zakhor-model/: Cargo.toml
crates/zakhor-model/src/: background.rs  decision.rs  entity_resolver.rs  extraction.rs  ingestion.rs  lib.rs  provenance.rs  ranking.rs
crates/zakhor-model/tests/: extraction_integration.rs
crates/zakhor-search/: Cargo.toml
crates/zakhor-search/src/: lexical.rs  lib.rs  sync.rs
crates/zakhor-storage/: Cargo.toml
crates/zakhor-storage/src/: lib.rs  schema.rs  sparql.rs  tracker_db.rs
src/: background.rs  code_index.rs  config.rs  decision.rs  entity_resolver.rs  error.rs  ingestion.rs  lexical.rs  main.rs  project.rs  provenance.rs  ranking.rs  schema.rs  semantic.rs  server.rs  sparql.rs  sync.rs  tool_capture.rs  tools.rs  tracker_db.rs  vocab.rs
src/api/: admin.rs  code.rs  decisions.rs  entities.rs  graph.rs  mod.rs  observations.rs  projects.rs  search.rs
tests/fixtures/spatial-engine-minimal/: lib.rs
tests/integration/: conftest.py  test_graph_traversal.py
tests/python/: conftest.py  pyproject.toml  run_tests.sh  test_data_model.py  test_tools.py  test_v2_pipeline.py
tests/python/tests/integration/: conftest.py  test_associative_relationships.py  test_graph_traversal.py  test_ingestion.py  test_ontology.py  test_text_index_traversal.py
ui/: eslint.config.mjs  index.html  package-lock.json  package.json  playwright.config.ts  pnpm-lock.yaml  tsconfig.app.json  tsconfig.json  tsconfig.node.json  tsconfig.tsbuildinfo  vite.config.ts
ui/src/: index.css  main.tsx  routeTree.gen.ts  test-plain-mocks.test.tsx  test-plain-mocks2.test.ts  test-vi-hoisted.test.ts  test-vi-mock-hoist.test.ts
ui/src/components/shared/: ConfidenceIndicator.tsx  DataTable.tsx  EmptyState.tsx  EntityTag.tsx  ErrorBoundary.tsx  LayoutShell.tsx  LoadingSkeleton.tsx  PaginationControls.tsx  SearchInput.tsx  SidebarNavigation.tsx  StatusBadge.tsx  TopBar.tsx  index.ts  shared-components.test.tsx
ui/src/components/ui/: button.test.tsx  button.tsx  input.tsx  progress.tsx  scroll-area.tsx  separator.tsx  table.tsx  tabs.tsx  tooltip.tsx
ui/src/lib/api/: admin.ts  client.ts  code.ts  decisions.ts  entities.ts  graph.ts  health.ts  index.ts  observations.ts  schemas.ts  search.ts
ui/src/pages/: AdminPage.test.tsx  AdminPage.tsx  CodePage.test.tsx  CodePage.tsx  DecisionDetailPage.tsx  DecisionsPage.test.tsx  DecisionsPage.tsx  EntitiesPage.test.tsx  EntitiesPage.tsx  EntityDetailPage.tsx  GraphPage.test.tsx  GraphPage.tsx  HomePage.test.tsx  HomePage.tsx  ObservationsPage.test.tsx  ObservationsPage.tsx  SearchPage.test.tsx  SearchPage.tsx
ui/src/routes/: __root.tsx  admin.tsx  code.tsx  decisions.tsx  entities.tsx  graph.tsx  observations.tsx  search.tsx
ui/src/routes/decisions/: $decisionId.tsx  index.tsx
ui/src/routes/entities/: $entityId.tsx  index.tsx
ui/src/stores/: AppContext.tsx
ui/tests/e2e/: api-mocks.ts  smoke.spec.ts  workflows.spec.ts
