[package]
name = "zakhor"
version = "0.1.0"
edition = "2024"
build = "build.rs"

[features]
# Build TinySPARQL from source during the Cargo build (using meson/ninja) rather
# than relying on a system-installed package.  Useful on macOS where
# `libtracker-sparql-3.0-dev` is not available as a system package.  Requires
# meson, ninja, pkg-config, and the following libraries to be installed:
# glib, libxml2, json-glib, libsoup (3.x), and icu4c (or libunistring).
vendored = ["tracker-sys/vendored"]

[dependencies]
anyhow = "1.0.102"
async-trait = "0.1.89"
clap = { version = "4", features = ["derive"] }
bincode = "1.3"
fastembed = "5.17"
gio = "0.22.6"
rmcp = { version = "1.7.0", features = ["server", "transport-io", "transport-streamable-http-server"] }
axum = { version = "0.7", features = ["http1", "http2", "macros", "tokio", "json"] }
schemars = "1.2.1"
tantivy = "0.22"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
tokio = { version = "1.52.3", features = ["full"] }
tower-http = { version = "0.6", features = ["cors"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "json"] }
toml = "0.8.22"
tracker-rs = "0.8.0"
tracker-sys = "0.8.0"
utoipa = { version = "5", features = ["axum_extras"] }
utoipa-swagger-ui = { version = "8", features = ["axum"] }

# SPARQL / RDF dependencies
rdf-types = "0.22"
iref = { version = "3", features = ["serde"] }
langtag = "0.4"
static-iref = "3"

[build-dependencies]
serde_json = "1.0.150"

[dev-dependencies]
quickcheck = "1.1.0"
quickcheck_macros = "1.2.0"

# Replace the published tracker-sys with our local fork that adds the
# `vendored` feature for Homebrew-based discovery on macOS.
[patch.crates-io]
tracker-sys = { path = "vendor/tracker-sys" }
