[workspace]
members = ["crates/*", "."]
resolver = "2"

[package]
name = "zakhor"
version = "0.1.0"
edition = "2024"
build = "build.rs"

[dependencies]
zakhor-api = { path = "crates/zakhor-api" }
zakhor-common = { path = "crates/zakhor-common" }
zakhor-model = { path = "crates/zakhor-model" }
zakhor-search = { path = "crates/zakhor-search" }
zakhor-storage = { path = "crates/zakhor-storage" }

clap = { version = "4", features = ["derive"] }
rmcp = { version = "1.7.0", features = ["server", "transport-io", "transport-streamable-http-server"] }
axum = { version = "0.7", features = ["http1", "http2", "macros", "tokio", "json"] }
tokio = { version = "1.52.3", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "json"] }

# Binary targets (migrate-v1-to-v2)
gio = "0.22.6"
tracker-rs = "0.8.0"

[build-dependencies]
serde_json = "1.0.150"

# Patch ort to rc.9 for gline-rs compatibility
# Note: This may break fastembed which expects rc.12
[patch.crates-io]
ort = { git = "https://github.com/pykeio/ort", tag = "v2.0.0-rc.9" }
ort-sys = { git = "https://github.com/pykeio/ort", tag = "v2.0.0-rc.9" }
