[package]
name = "zakhor-api"
version = "0.1.0"
edition = "2024"

[lib]

[dependencies]
zakhor-common = { workspace = true }
zakhor-storage = { workspace = true }
zakhor-search = { workspace = true }
zakhor-model = { workspace = true }

axum = { workspace = true, features = ["http1", "http2", "macros", "tokio", "json"] }
rmcp = { workspace = true, features = ["server", "transport-io", "transport-streamable-http-server"] }
schemars = { workspace = true }
tantivy = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tower-http = { workspace = true, features = ["cors"] }
tracing = { workspace = true }
tracker-rs = { workspace = true }
gio = { workspace = true }
oxrdf = { workspace = true }
oxiri = { workspace = true }
utoipa = { workspace = true, features = ["axum_extras"] }
utoipa-swagger-ui = { version = "8", features = ["axum"] }
