[package]
name = "zakhor-common"
version = "0.1.0"
edition = "2024"

[lib]

[dependencies]
anyhow = "1.0.102"
serde = { workspace = true, features = ["derive"] }
tokio = { workspace = true, features = ["full"] }
toml = "0.8.22"
iref = "3"
oxiri = { workspace = true }
static-iref = { workspace = true }
