[package]
name = "zakhor-model"
version = "0.1.0"
edition = "2024"

[lib]

[features]
gliner-integration = []

[dependencies]
zakhor-common = { path = "../zakhor-common" }
zakhor-storage = { path = "../zakhor-storage" }
zakhor-search = { path = "../zakhor-search" }

gio = "0.22.6"
tracker-rs = "0.8.0"
rdf-types = "0.22"
schemars = "1.2.1"
serde = { version = "1.0.228", features = ["derive"] }
iref = { version = "3", features = ["serde"] }
tokio = { version = "1.52.3", features = ["full"] }
tracing = "0.1.41"
utoipa = "5.3.0"

# GLiNER extraction pipeline - using local forks with ort =2.0.0-rc.12 to match fastembed
gline-rs = { path = "/tmp/gline-rs", features = ["load-dynamic"] }
orp = { path = "/tmp/orp" }
ort = { version = "2.0.0-rc.12", features = ["load-dynamic"] }
