[package]
name = "zakhor-model"
version = "0.1.0"
edition = "2024"

[lib]

[features]
gliner-integration = []

[dependencies]
zakhor-common = { workspace = true }
zakhor-storage = { workspace = true }
zakhor-search = { workspace = true }

gio = { workspace = true }
tracker-rs = { workspace = true }
oxrdf = { workspace = true }
schemars = { workspace = true }
serde = { workspace = true, features = ["derive"] }
oxiri = { workspace = true, features = ["serde"] }
thiserror = "2"
tokio = { workspace = true, features = ["full"] }
tracing = { workspace = true }
utoipa = { workspace = true }

# GLiNER extraction pipeline - using forked gline-rs/orp with ort =2.0.0-rc.12 to match fastembed
gline-rs = { git = "https://github.com/nickrobison/gline-rs", branch = "ort-rc12", features = ["load-dynamic"] }
orp = { git = "https://github.com/nickrobison/orp", branch = "ort-rc12" }
ort = { version = "2.0.0-rc.12", features = ["load-dynamic"] }
