[package]
name = "zakhor-search"
version = "0.1.0"
edition = "2024"

[lib]

[dependencies]
zakhor-common = { workspace = true }
tantivy = { workspace = true }
tracker-rs = { workspace = true }
gio = { workspace = true }
fastembed = "5.17"
bincode = "1.3"

[dev-dependencies]
quickcheck = "1.1.0"
quickcheck_macros = "1.2.0"
