[package]
name = "zakhor-storage"
version = "0.1.0"
edition = "2024"

[lib]

[dependencies]
zakhor-common = { workspace = true }
gio = { workspace = true }
tracker-rs = { workspace = true }
oxrdf = { workspace = true }
oxiri = { workspace = true }
static-iref = { workspace = true }
tracing = { workspace = true }
