[project]
name = "zakhor-integration-tests"
version = "0.1.0"
description = "Python MCP integration test suite for Zakhor"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.27",
    "mcp>=1.0.0",
    "pytest>=8.0",
    "pytest-asyncio>=0.24,<1.0",
    "SPARQLWrapper>=2.0",
    "anyio>=4.0",
]

[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["zakhor*"]

[tool.uv]
package = false

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["."]
markers = [
    "skipif_tracker_unavailable: skip test when GNOME Tracker is not available",
]
